load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/opicaud/monorepo/cqrs

gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=cqrs/go.mod",
        "-to_macro=cqrs.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)
