load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/opicaud/monorepo/cqrs

load("//hack:release.bzl", "release_me")

gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=cqrs/go.mod",
        "-to_macro=monorepo-deps.bzl%go_dependencies",
    ],
    command = "update-repos",
)

release_me()
