module(
    name="cqrs",
    version="1.0.0"
)

bazel_dep(name = "rules_go", version = "0.39.1", repo_name = "io_bazel_rules_go")
single_version_override(module_name="rules_go", version="0.39.1")

bazel_dep(name = "gazelle", version = "0.31.1", repo_name = "bazel_gazelle")
single_version_override(module_name="bazel_gazelle", version="0.31.0")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_stretchr_testify",
    "org_golang_google_grpc",
    "com_github_grpc_ecosystem_grpc_gateway_v2",
    "com_github_spf13_viper",
    "com_github_smartystreets_assertions",
    "com_github_beorn7_floats"
)