module(
    name="cqrs",
    version="1.0.0"
)

bazel_dep(name = "rules_go", version = "0.44.0", repo_name = "io_bazel_rules_go")
single_version_override(module_name="rules_go", version="0.44.0")

bazel_dep(name = "gazelle", version = "0.35.0", repo_name = "bazel_gazelle")
single_version_override(module_name="gazelle", version="0.35.0")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps)