module(
    name="events",
    version=""
)
bazel_dep(name = "rules_go", version = "0.39.1", repo_name = "io_bazel_rules_go")
single_version_override(module_name="rules_go", version="0.39.1")

bazel_dep(name = "gazelle", version = "0.35.0", repo_name = "bazel_gazelle")
single_version_override(module_name="bazel_gazelle", version="0.31.0")

rules_go_non_module_deps = use_extension("@io_bazel_rules_go//go/private:extensions.bzl", "non_module_dependencies")
use_repo(
    rules_go_non_module_deps,
    "go_googleapis",
)
go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "org_golang_google_grpc",
    "com_github_google_uuid",
    "com_github_spf13_viper",
    "com_github_grpc_ecosystem_grpc_gateway_v2",
)
