load("@pact-helper//:toolchains.bzl", "pact_protobuf_plugin_toolchain", "pact_reference_toolchain")

load("@@//hack:release.bzl", "release_me")

release_me()

toolchain_type(
    name = "pact_protobuf_plugin_toolchain_type",
    visibility = ["//visibility:public"],
)

pact_reference_toolchain(
    name = "pact_reference_toolchain_impl",
    pact_verifier_cli = ":pact_verifier_cli_toolchain",
    libpact_ffi = ":pact_ffi"
)

genrule(
    name = "pact_verifier_cli_toolchain",
    outs = ["pact_verifier_cli_bin"],
    srcs = ["@pact_verifier_cli_archive//file"],
    cmd = "gzip -d - < $< > $@",
)

cc_import(
    name = "pact_ffi_cc",
    shared_library = ":pact_ffi",
    #linkstatic=1,
    visibility = ["//visibility:public"],
)

genrule(
    name = "pact_ffi",
    outs = ["libpact_ffi.dylib"],
    srcs = ["@pact_ffi_archive//file"],
    cmd = "gzip -d - < $< > $@",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "pact_reference_toolchain",
    toolchain = ":pact_reference_toolchain_impl",
    toolchain_type = ":pact_reference_toolchain_type",
    exec_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
)

toolchain_type(
    name = "pact_reference_toolchain_type",
    visibility = ["//visibility:public"],
)

