load("@pact-helper//:toolchains.bzl", "pact_protobuf_plugin_toolchain", "pact_reference_toolchain")

load("@@//hack:release.bzl", "release_me")

release_me()

toolchain_type(
    name = "pact_protobuf_plugin_toolchain_type",
    visibility = ["//visibility:public"],
)

alias(
    name = "pact_ffi",
    actual = select({
       ":macos": "@pact_reference_osx_x86_64_toolchain//:pact_ffi_darwin_amd64",
        ":linux": "@pact_reference_linux_x86_64_toolchain//:pact_ffi_linux_amd64",
    }),
    visibility = ["//visibility:public"],
)

config_setting(
      name = "macos",
      constraint_values = [
          "@platforms//os:macos",
          "@platforms//cpu:x86_64",
      ]
)

config_setting(
      name = "linux",
      constraint_values = [
          "@platforms//os:linux",
          "@platforms//cpu:x86_64",
      ]
)
toolchain_type(
    name = "pact_reference_toolchain_type",
    visibility = ["//visibility:public"],
)

