load("@rules_pact//:defs.bzl", "pact_protobuf_plugin_toolchain", "pact_reference_toolchain")
load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@hack//:release.bzl", "release_me")

release_me()

toolchain_type(
    name = "pact_protobuf_plugin_toolchain_type",
    visibility = ["//visibility:public"],
)

alias(
    name = "pact_ffi",
    actual = select({
       ":macos": "@pact_reference_osx_x86_64_toolchain//:pact_ffi_darwin_amd64",
        ":linux": "@pact_reference_linux_x86_64_toolchain//:pact_ffi_linux_amd64",
    }),
    visibility = ["//visibility:public"],
)

config_setting(
      name = "macos",
      constraint_values = [
          "@platforms//os:macos",
          "@platforms//cpu:x86_64",
      ]
)

config_setting(
      name = "linux",
      constraint_values = [
          "@platforms//os:linux",
          "@platforms//cpu:x86_64",
      ]
)
toolchain_type(
    name = "pact_reference_toolchain_type",
    visibility = ["//visibility:public"],
)

load("@stardoc//stardoc:stardoc.bzl", "stardoc")

stardoc(
    name = "docs",
    input = "@rules_pact//:defs.bzl",
    out = "docs.md",
    deps = [":bzl_lib"]
)
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "bzl_lib",
    srcs = [
        "@rules_pact//private:toolchains.bzl",
        "@rules_pact//private:consumer.bzl",
        "@rules_pact//private:provider.bzl",
    ],
    visibility = ["//visibility:public"],
)


diff_test(
    name = "docs_diff_test",
    file1 = ":docs",
    file2 = ":README.md",
)

exports_files(
    glob(["defs.bzl"]),
    visibility = ["//visibility:public"],
)

