load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/opicaud/monorepo/shape-app

gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=shape-app/go.mod",
        "-to_macro=shape-app.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

filegroup(
    name = "contract_shape_app_consumer",
    srcs = [
        "//shape-app/domain/internal:events_domain_contract",
    ],
    visibility = ["//visibility:public"],
)
