load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/opicaud/monorepo/shape-app

gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=shape-app/go.mod",
        "-to_macro=monorepo-deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

load("//hack:release.bzl", "release_me")

release_me()
