load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/opicaud/monorepo/shape-app
# gazelle:go_grpc_compilers @io_bazel_rules_go//proto:go_grpc_v2, @io_bazel_rules_go//proto:go_proto

gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=shape-app/go.mod",
        "-to_macro=monorepo-deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

load("//hack:release.bzl", "release_me")

release_me()
