filegroup(
    name = "pact-plugins",
    srcs = glob(['plugins/**']),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "pact-verifier",
    srcs = glob(['verifier/**']),
    visibility = ["//visibility:public"],
)

cc_library(
  name = "pact-ffi",
  srcs = ["@pact_reference//pact_ffi"],
  linkstatic=1,
  visibility = ["//visibility:public"],
)
