load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "consumer",
    srcs = ["consumer.go"],
    importpath = "trackclear.be/example/shape/app/consumer",
    visibility = ["//visibility:public"],
    deps = [
        "//app/proto",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)
