load("@rules_helm//helm:defs.bzl", "helm_chart", "helm_lint_test", "helm_package")
load("@aspect_bazel_lib//lib:yq.bzl", "yq")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("//hack:release.bzl", "release_me")

release_me()

helm_lint_test(
    name = "helm_test",
    chart = ":eventstore-grpc",
)

helm_chart(
    name = "eventstore-grpc",
)

helm_package(
    name = "helm_package",
    chart = "Chart.yaml",
    values = "values.yaml",
)

yq(
    name = "prepare_upgrade_chart_app_version",
    srcs = ["Chart.yaml"],
    expression = "|".join([
        "load(strenv(STAMP)) as $stamp",
        "(.appVersion) = ($stamp.STABLE_EVENTS // \"<unstamped>\")",
    ]),
    visibility = ["//visibility:private"],
)

yq(
    name = "prepare_upgrade_chart_version",
    srcs = ["Chart.yaml"],
    expression = "|".join([
        "load(strenv(STAMP)) as $stamp",
        "(.version) = ($stamp.STABLE_EVENTSTORE_GRPC_APP_SEMVER // \"0.1.0\")",
    ]),
    visibility = ["//visibility:private"],
)

write_source_files(
    name = "upgrade_chart_app_version",
    in_file = ":prepare_upgrade_chart_app_version",
    out_file = "Chart.yaml",
    visibility = ["//visibility:private"],
)

write_source_files(
    name = "upgrade_chart_version",
    in_file = ":prepare_upgrade_chart_version",
    out_file = "Chart.yaml",
    visibility = ["//visibility:private"],
)

write_source_files(
    name = "apply_chart",
    additional_update_targets = [
        ":upgrade_chart_app_version",
        ":upgrade_chart_version",
    ]
)
