load("@rules_helm//helm:defs.bzl", "helm_chart", "helm_lint_test", "helm_package")
load("@aspect_bazel_lib//lib:yq.bzl", "yq")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("//hack:release.bzl", "release_me")
load("//hack:update-charts-versions.bzl", "update_me")

release_me()

update_me("STABLE_GRPC_EVENTSTORE_NEXT_RELEASE_VERSION", "STABLE_APPS_EVENTSTORE_GRPC_NEXT_RELEASE_SEMVER")

helm_lint_test(
    name = "helm_test",
    chart = ":eventstore-grpc",
)

helm_chart(
    name = "eventstore-grpc",
)

helm_package(
    name = "helm_package",
    chart = "Chart.yaml",
    values = "values.yaml",
)
