load("@rules_helm//helm:defs.bzl", "helm_chart", "helm_lint_test", "helm_install")
load("@aspect_bazel_lib//lib:yq.bzl", "yq")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("//hack:release.bzl", "release_me")
load("//hack:update-charts-versions.bzl", "update_me")

release_me()

updame_me("STABLE_APPS_SECURITY_NEXT_RELEASE_VERSION","STABLE_APPS_SECURITY_NEXT_RELEASE_SEMVER")

helm_lint_test(
    name = "helm_test",
    chart = ":security",
)

helm_chart(
    name = "security",
    chart = "Chart.yaml",
    registry_url = "oci://ghcr.io/opicaud",
    deps = ["@cert_manager"],
    values = "values.yaml",
)
