load("@rules_helm//helm:defs.bzl", "helm_chart", "helm_lint_test", "helm_package")
load("//hack:release.bzl", "release_me")
load("//hack:update-charts-versions.bzl", "update_me")

release_me()

update_me("STABLE_SHAPE_APP_NEXT_RELEASE_VERSION", "STABLE_SHAPE_APP_GRPC_NEXT_RELEASE_SEMVER")

helm_lint_test(
    name = "helm_test",
    chart = ":helm_package",
)

helm_chart(
    name = "shape-app-grpc",
)

helm_package(
    name = "helm_package",
    chart = "Chart.yaml",
    values = "values.yaml",
)
