load("@rules_helm//helm:defs.bzl", "helm_chart", "helm_lint_test")
load("//hack:release.bzl", "release_me")
load("//hack:update-charts-versions.bzl", "update_me")
release_me()

update_me("STABLE_SHAPE_APP_NEXT_RELEASE_VERSION", "STABLE_APPS_SHAPE_APP_GRPC_NEXT_RELEASE_SEMVER")

helm_lint_test(
    name = "helm_test",
    chart = ":shape-app-grpc",
)

helm_chart(
    name = "shape-app-grpc",
    chart = "Chart.yaml",
    values = "values.yaml",
    templates = glob(["templates/**"]),
    registry_url = "oci://ghcr.io/opicaud"
)