load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "pkg",
    srcs = ["cqrs.go"],
    importpath = "github.com/opicaud/monorepo/cqrs/pkg",
    visibility = ["//visibility:public"],
    deps = ["//events/pkg"],
)

go_test(
    name = "pkg_test",
    srcs = ["cqrs_test.go"],
    embed = [":pkg"],
    deps = [
        "//events/pkg",
        "@com_github_google_uuid//:uuid",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
    ],
)
