load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "pkg",
    srcs = [
        "domainevent.go",
        "eventstore.go",
        "standard_events_emitter.go",
    ],
    importpath = "github.com/opicaud/monorepo/events/pkg",
    visibility = ["//visibility:public"],
    deps = ["@com_github_google_uuid//:uuid"],
)
