load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "app",
    srcs = ["provider.go"],
    importpath = "trackclear.be/example/shape/app",
    visibility = ["//visibility:public"],
    deps = [
        "//app/proto",
        "//domain/adapter",
        "//domain/shape",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
    ],
)
