load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "test",
    srcs = ["features_it.go"],
    importpath = "trackclear.be/example/shape/test",
    visibility = ["//visibility:public"],
    deps = [
        "//domain/adapter",
        "//domain/shape",
        "@com_github_beorn7_floats//:floats",
        "@com_github_cucumber_godog//:godog",
        "@com_github_google_uuid//:uuid",
    ],
)
