load("@io_bazel_rules_docker//container:container.bzl", "container_bundle", "container_image")

container_image(
    name = "pact_verifier_cli",
    base = "@debian_base//image",
    directory = "/bin",
    files = ["//pact-helper:pact_verifier_cli_linux_x86_64"],
    visibility = ["//visibility:private"],
)

container_image(
    name = "pact_verifier_cli_with_grpc_plugin_image",
    base = ":pact_verifier_cli",
    directory = "/plugins",
    files = [
        "//pact-helper:pact_protobuf_plugin_bin_linux_x86_64",
        "@pact_plugins//:pact-plugin",
    ],
    symlinks = {
        "/root/.pact/plugins/protobuf-0.3.1/pact-plugin.json": "/plugins/pact-plugin.json",
        "/root/.pact/plugins/protobuf-0.3.1/pact-protobuf-plugin": "/plugins/pact_protobuf_plugin_bin",
    },
    visibility = ["//visibility:public"],
)
